Add instructions for checking console output

--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
 </head>
 <body>
   <h1>Nicole's Module 4 Solution Starter</h1>
+  <p>To check if it is working, open the browser console:</p>
+  <ul>
+    <li>Press <strong>Ctrl + Shift + J</strong> (Windows/Linux)</li>
+    <li>Press <strong>Cmd + Option + J</strong> (Mac)</li>
+  </ul>
+  <p>Inspect the console for output.</p>
 </body>
 </html>
